--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/drewr7/Burger.git"
+    "url": "https://github.com/drewr7/Burger.git"
   },
   "author": "",
   "license": "ISC",
